[gd_scene load_steps=4 format=3 uid="uid://co4kesq32wfht"]

[ext_resource type="Script" path="res://Blokus Menu and Functions/Movement Scripts/W.gd" id="1_iuabk"]
[ext_resource type="Texture2D" uid="uid://ckqk0j8aspq6k" path="res://textures/title/Title.png" id="1_pvcfn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yhwo"]
size = Vector2(740, 680)

[node name="W" type="Node2D"]
script = ExtResource("1_iuabk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, 0)
scale = Vector2(0.0914286, 0.32)
texture = ExtResource("1_pvcfn")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-27.3437, 4.6875)
shape = SubResource("RectangleShape2D_1yhwo")

[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
